logs/neg/t3691-neg.log
t3691.scala:4: error: type mismatch;
 found   : Test.A[String]
 required: AnyRef
 val b = (new A[String]{}): { type A[x] } // not ok
          ^
t3691.scala:5: error: type mismatch;
 found   : Test.A[String]
 required: AnyRef
 val c = (new A[String]{}): { type A } // not ok
          ^
t3691.scala:7: error: type mismatch;
 found   : AnyRef
 required: AnyRef
 val x = (new { type A = String }): { type A[X] } // not ok
          ^
three errors found
